test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_bin_const.draco
proc main() void : a := 0b110; a := 0B111; corp;

