test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_and_as_identifier.draco
int and;
 
proc main() void : a := 1; corp;
